journal/monica/web-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: monica-web
  labels:
    app.kubernetes.io/name: nginx
    app.kubernetes.io/component: webserver
spec:
  selector:
    matchLabels:
      deployment: monica-web
  template:
    metadata:
      labels:
        deployment: monica-web
        app.kubernetes.io/name: nginx
        app.kubernetes.io/component: webserver
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          volumeMounts:
            - name: data
              mountPath: /var/www/html/storage
            - name: http-data
              mountPath: /var/www/html/
            - name: nginx-conf
              mountPath: /etc/nginx/
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: monica-data
        - name: nginx-conf
          configMap:
            name: monica-nginx-config
        - name: http-data
          emptydir: {}
