journal/monica/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: monica
spec:
  selector:
    deployment: monica-web
  ports:
    - port: 80
      targetPort: http
      name: http
      protocol: TCP
      appProtocol: http
---
apiVersion: v1
kind: Service
metadata:
  name: monica-fgci
spec:
  selector:
    deployment: monica-app
  ports:
    - port: 9000
      targetPort: monica-fcgi
      name: monica-fcgi
      protocol: TCP
      appProtocol: http
