journal/monica/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: journal
spec:
  host: journal.apps.homelab.csfreak.com
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: monica
    weight: 100
  wildcardPolicy: None
